<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background_gradient"
    tools:context=".RegistrarImagen">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloRegistro"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/editTextNombreObra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint1"
        android:textColor="@android:color/black"
        android:background="@color/appColorEnd"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/imageId"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="Imagen seleccionada"
        android:src="@drawable/placeholder"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/editTextNombreObra"
        app:layout_constraintBottom_toTopOf="@id/btnCargarImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/btnCargarImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardarImagen"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/imageId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnFirmarGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firmarImagen"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/btnCargarImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>





